refactor: migrate sell stats exporter to java 8
Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>