@@ -14,17 +14,13 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 
 import java.io.File;
-import java.io.FileWriter;
+import java.io.FileOutputStream;
 import java.io.OutputStream;
+import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
 import java.net.InetSocketAddress;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
-import java.time.Duration;
 import java.util.Date;
 import java.util.List;
 import java.util.Locale;
@@ -125,7 +121,7 @@ public class SellStatsExporter {
                         exchange.close();
                     }
                 });
-                executor = Executors.newVirtualThreadPerTaskExecutor();
+                executor = Executors.newCachedThreadPool();
                 server.setExecutor(executor);
                 server.start();
                 activeHttpServer = server;
@@ -187,7 +183,7 @@ public class SellStatsExporter {
             try {
                 File htmlFile = new File(plugin.getDataFolder(), "sell-stats.html");
                 String html = generateDashboardHtmlCached();
-                try (PrintWriter writer = new PrintWriter(new FileWriter(htmlFile, StandardCharsets.UTF_8))) {
+                try (PrintWriter writer = new PrintWriter(new OutputStreamWriter(new FileOutputStream(htmlFile), StandardCharsets.UTF_8.name()))) {
                     writer.print(html);
                 }
 
@@ -222,7 +218,8 @@ public class SellStatsExporter {
                 ? configuredUrl
                 : "http://localhost:" + actualBoundPort + "/stats";
 
-        if (sender instanceof Player player && player.isOnline()) {
+        if (sender instanceof Player && ((Player) sender).isOnline()) {
+            Player player = (Player) sender;
             TextComponent linkMsg = new TextComponent(ColorUtils.toComponent("&a&l[Sell Stats Web] &fOpen live Shop Analytics site: &e&n" + localWebUrl));
             linkMsg.setClickEvent(new ClickEvent(ClickEvent.Action.OPEN_URL, localWebUrl));
             linkMsg.setHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, new Text(ColorUtils.toComponent("&7Click to open &e" + localWebUrl + "\n&7File: plugins/UltimateDonutSMP/sell-stats.html"))));
@@ -770,7 +767,7 @@ public class SellStatsExporter {
         StringBuilder sb = new StringBuilder();
         for (String w : words) {
             if (w.isEmpty()) continue;
-            if (!sb.isEmpty()) sb.append(' ');
+            if (sb.length() != 0) sb.append(' ');
             sb.append(Character.toUpperCase(w.charAt(0))).append(w.substring(1));
         }
         return sb.toString();
